# node-autoit-mediapipe-com

./: .gitignore  README.md  WORKSPACE  package-lock.json  package.json
autoit-mediapipe-com/: BUILD  CMakeLists.txt  build.bat  install.bat  project_build_steps.cmake
autoit-mediapipe-com/cmake/: RequireOpenCV.cmake  UsePython3Venv.cmake  get_temp_dir.cmake  glob_copy.cmake
autoit-mediapipe-com/dotnet/: MediapipeComInterop.cs
autoit-mediapipe-com/dotnet/Properties/: AssemblyInfo.cs
autoit-mediapipe-com/patches/: 001-mediapipe-src.patch.in  001-opencv-src.patch
autoit-mediapipe-com/rules_impl/: BUILD  cc_object.bzl  library.bzl  pch_library.bzl
autoit-mediapipe-com/scripts/: configure_bazel.js.in
autoit-mediapipe-com/src/: autoit_bridge.cpp  autoit_bridge.h  autoit_bridge_common.cpp  autoit_bridge_common.h  autoit_def.h  dllmain.cpp  dllmain.h  impl_cv.h  impl_mat.cpp  impl_mat.h  mediapipeCOM.rc
autoit-mediapipe-com/src/binding/: calculator_graph.cc  calculator_graph.h  image.h  image_frame.cc  image_frame.h  map_container.cc  map_container.h  mediapipe.cc  message.cc  message.h  packet.cc  packet.h  packet_creator.cc  packet_creator.h  packet_getter.cc  packet_getter.h  repeated_container.cc  repeated_container.h  repeated_container.impl.h  resource_util.cc  resource_util.h  solution_base.cc  solution_base.h  ssize_t.h  text_format.cc  text_format.h  time_series_util.h  timestamp.h  util.h  util.impl.h  validated_graph_config.h  validated_graphconfig.cc
autoit-mediapipe-com/src/binding/solutions/: download_utils.cc  download_utils.h  drawing_styles.cc  drawing_styles.h  drawing_utils.cc  drawing_utils.h  face_detection.cc  face_detection.h  face_mesh.cc  face_mesh.h  face_mesh_connections.cc  face_mesh_connections.h  hands.cc  hands.h  hands_connections.cc  hands_connections.h  holistic.cc  holistic.h  objectron.cc  objectron.h  pose.cc  pose.h  pose_connections.h  selfie_segmentation.cc  selfie_segmentation.h
autoit-mediapipe-com/src/binding/tasks/audio/: audio_classifier.cc  audio_classifier.h  audio_embedder.cc  audio_embedder.h
autoit-mediapipe-com/src/binding/tasks/audio/core/: audio_task_running_mode.h  base_audio_task_api.cc  base_audio_task_api.h
autoit-mediapipe-com/src/binding/tasks/components/containers/: audio_data.cc  audio_data.h  bounding_box.cc  bounding_box.h  category.cc  category.h  classification_result.cc  classification_result.h  detections.cc  detections.h  embedding_result.cc  embedding_result.h  keypoint.cc  keypoint.h  landmark.cc  landmark.h  landmark_detection_result.cc  landmark_detection_result.h  rect.cc  rect.h
autoit-mediapipe-com/src/binding/tasks/components/processors/: classifier_options.cc  classifier_options.h
autoit-mediapipe-com/src/binding/tasks/components/utils/: cosine_similarity.cc  cosine_similarity.h
autoit-mediapipe-com/src/binding/tasks/core/: base_options.cc  base_options.h  task_info.cc  task_info.h  task_runner.cc  task_runner.h
autoit-mediapipe-com/src/binding/tasks/text/: language_detector.cc  language_detector.h  text_classifier.cc  text_classifier.h  text_embedder.cc  text_embedder.h
autoit-mediapipe-com/src/binding/tasks/text/core/: base_text_task_api.cc  base_text_task_api.h
autoit-mediapipe-com/src/binding/tasks/vision/: face_aligner.cc  face_aligner.h  face_detector.cc  face_detector.h  face_landmarker.cc  face_landmarker.h  face_stylizer.cc  face_stylizer.h  gesture_recognizer.cc  gesture_recognizer.h  hand_landmarker.cc  hand_landmarker.h  holistic_landmarker.cc  holistic_landmarker.h  image_classifier.cc  image_classifier.h  image_embedder.cc  image_embedder.h  image_segmenter.cc  image_segmenter.h  interactive_segmenter.cc  interactive_segmenter.h  object_detector.cc  object_detector.h  pose_landmarker.cc  pose_landmarker.h
autoit-mediapipe-com/src/binding/tasks/vision/core/: base_vision_task_api.cc  base_vision_task_api.h  image_processing_options.h  vision_task_running_mode.h
autoit-mediapipe-com/src/contrib/: mat_extra.h
autoit-mediapipe-com/test/: test.cs
autoit-mediapipe-com/udf/: docs.md  mediapipe.sxs.config  mediapipe.sxs.manifest  mediapipe_enums.au3  mediapipe_interface.au3  mediapipe_udf.au3  mediapipe_udf_utils.au3  mediapiped.sxs.config  mediapiped.sxs.manifest
examples/: 01-face_detection.au3  02-face_mesh.au3  03-hands.au3  04-holistic.au3  05-objectron.au3  06-pose.au3  07-selfie_segmentation.au3
examples/autoit/: 01-face_detection-gui.au3  01-face_detection.au3  02-face_mesh-gui.au3  02-face_mesh.au3  03-hands-gui.au3  03-hands.au3  04-holistic-gui.au3  04-holistic.au3  05-objectron-gui.au3  05-objectron.au3  06-pose-gui.au3  06-pose.au3  07-selfie_segmentation-gui.au3  07-selfie_segmentation.au3  face_detection.au3
examples/dotnet/: 01-face_detection.ps1  02-face_mesh.ps1  03-hands.ps1  04-holistic.ps1  05-objectron.ps1  06-pose.ps1  07-selfie_segmentation.ps1  mediapipe_utils.psm1
examples/gui/: face_detection.au3  face_mesh.au3  hands.au3  holistic.au3  objectron.au3  pose.au3  selfie_segmentation.au3
scripts/: build.js  manual.sh  tasks.sh  test.js  update-readme.js  version.js
src/: AutoItGenerator.js  COMGenerator.js  CoClass.js  FileUtils.js  FunctionDeclaration.js  PropertyDeclaration.js  alias.js  constants.js  conversion.js  gen.js  ids.json  map_conversion.js  vector_conversion.js
src/conversions/: Mat.js
src/declarations/: AccessFlag.js  Mat.js  UMatUsageFlags.js  audio.js  audio_classifier.js  audio_embedder.js  autoit.js  calculator_graph.js  classifier_options.js  containers.js  cuda.js  cv.js  drawing_utils.js  face_detection.js  face_mesh.js  face_mesh_connections.js  hands.js  hands_connections.js  holistic.js  image.js  image_frame.js  mediapipe.js  model_ckpt_util.js  objectron.js  packet.js  packet_creator.js  packet_getter.js  pose.js  pose_connections.js  processors.js  processors_classifier_options.js  protobuf.js  solution_base.js  task_runner.js  (+8 more)
test/: _assert.au3  _mat_utils.au3  _proto_utils.au3  _test_utils.au3  image_frame_test.au3  image_test.au3  packet_test.au3  solution_base_test.au3  timestamp_test.au3
(+51 files in other folders)
